[metadata]
name = devmon
version = attr: devmon.__version__
author = n0rvyn
author_email = norvyn@norvyn.com
description = SNMP OID values collector
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
url = https://github.com/n0rvyn/devmon
project_urls =
    Source = https://github.com/n0rvyn/devmon
    Bug Tracker = https://github.com/n0rvyn/devmon/issues
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Console
    Natural Language :: English
    Development Status :: 5 - Production/Stable
keywords = DevMon SNMP OID
[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11.*
install_requires =
    PyYAML
    PyMySQL
    pymongo
    paramiko
    pytz
    influxdb3-python[pandas]
    pyarrow<13.1,>=13.0
    numpy<=1.26.1
[options.packages.find]
where = .
exclude =
    tests
    tests.apis
    tests.core
